--- a/frontend/src/styles/SignIn.css
+++ b/frontend/src/styles/SignIn.css
@@ -167,7 +167,7 @@ padding-top: 0px;
 .SeePasswordImg {
   width:5%;
   position: absolute;
-  top:42px;
+  top:40px;
   right:10px;
   cursor: pointer;
 }
