--- a/frontend/src/styles/StaffInventory.css
+++ b/frontend/src/styles/StaffInventory.css
@@ -17,7 +17,22 @@
 }
 
 .tableHolderInventory::-webkit-scrollbar {
-    display: none;
+  width: 20px;
+}
+
+  .tableHolderInventory::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  .tableHolderInventory::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+  .tableHolderInventory::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
   }
 
   .editImageInventory{
